custom-resource-consumers/takeout/apps/crypto/btc-rpc-explorer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btc-rpc-explorer
  namespace: crypto
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: btc-rpc-explorer
spec:
  replicas: 0
  selector:
    matchLabels:
      app: btc-rpc-explorer
  template:
    metadata:
      annotations: {}
      labels:
        app: btc-rpc-explorer
    spec:
      containers:
        - name: btc-rpc-explorer
          image: tyzbit/btc-rpc-explorer:latest
          # image: tyzbit/btc-rpc-explorer:v3.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 512Mi
