custom-resource-consumers/takeout/apps/crypto/btc-rpc-explorer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: btc-rpc-explorer
  namespace: crypto
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${blog_domain_ddns}
spec:
  tls:
    - hosts:
        - "btc.${blog_domain}"
      secretName: btc.${blog_domain}-tls
  rules:
  - host: btc.${blog_domain}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: btc-rpc-explorer
            port:
              number: 80
